<resources>
    <string name="app_name">Standard Calculator</string>
    <string name="btn_c">C</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn_x">X</string>
    <string name="btn_d">/</string>
    <string name="btn_s">-</string>
    <string name="btn_a">+</string>
    <string name="btn_r">%</string>
    <string name="btn_p">X²</string>
    <string name="btn_pm">+/-</string>
    <string name="btn_e">=</string>
    <string name="btn.">·</string>
</resources>
